[Atualização] - Responsividade Tela de Informações

--- a/informacao_local.html
+++ b/informacao_local.html
@@ -48,7 +48,7 @@
                     <a href="#" class="link-nav">FAQ</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">Faça o teste</a>
+                    <a href="teste_interativo.html" class="menu-hide link-nav entrar">Faça o teste</a>
                 </li>
             </nav>
         </section>
@@ -90,30 +90,32 @@
         <section>
             <p class="p-principal">A Creche Canina Feliz oferece um ambiente seguro e divertido para o seu animal. Com profissionais dedicados e diversas atividades, garantimos que seu pet se sinta amado e acolhido.</p>
             <h3 class="titulo-secoes">Aqui seus pets podem desfrutar de:</h3>
-            <div class="lista-beneficios">
-                <div class="beneficios" id="teste">
-                    <img src="assets/imagens/icons/brincadeira-icon.svg">
-                    <p class="p-texto">Área de brincadeiras</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/piscina-icon.svg">
-                    <p class="p-texto">Piscina para Cães</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/cuidados-icon.svg">
-                    <p class="p-texto">Cuidados Personalizados</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/transporte-icon.svg">
-                    <p class="p-texto">Serviço de Transporte</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/descanso-icon.svg">
-                    <p class="p-texto">Área de Descanso</p>
-                </div>
-                <div class="beneficios">
-                    <img src="assets/imagens/icons/banho-tosa-icon.svg">
-                    <p class="p-texto">Banho e tosa</p>
+            <div class="lista">
+                <div class="lista-beneficios">
+                    <div class="beneficios" id="teste">
+                        <img src="assets/imagens/icons/brincadeira-icon.svg">
+                        <p class="p-texto">Área de brincadeiras</p>
+                    </div>
+                    <div class="beneficios">
+                        <img src="assets/imagens/icons/piscina-icon.svg">
+                        <p class="p-texto">Piscina para Cães</p>
+                    </div>
+                    <div class="beneficios">
+                        <img src="assets/imagens/icons/cuidados-icon.svg">
+                        <p class="p-texto">Cuidados Personalizados</p>
+                    </div>
+                    <div class="beneficios">
+                        <img src="assets/imagens/icons/transporte-icon.svg">
+                        <p class="p-texto">Serviço de Transporte</p>
+                    </div>
+                    <div class="beneficios">
+                        <img src="assets/imagens/icons/descanso-icon.svg">
+                        <p class="p-texto">Área de Descanso</p>
+                    </div>
+                    <div class="beneficios">
+                        <img src="assets/imagens/icons/banho-tosa-icon.svg">
+                        <p class="p-texto">Banho e tosa</p>
+                    </div>
                 </div>
             </div>
             <button class="outros-servicos">+ Atividades e Serviços</button>
@@ -195,7 +197,7 @@
             <h3 class="titulo-secoes">Nossa Localização:</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.7301876446795!2d-49.25493042494304!3d-16.690379845655144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef1077239954f%3A0x40ee78e11fd2a527!2sFACINPRO%20-%20Faculdade%20INPRO%20-%20Gradua%C3%A7%C3%A3o%2C%20P%C3%B3s-Gradua%C3%A7%C3%A3o%20e%20MBA!5e0!3m2!1spt-BR!2sbr!4v1729574271937!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-        <div class="collapse">
+        <div class="collapse" tabindex="1">
             <i class="fa-solid fa-angle-left fa-2x"></i>
             <a>Chat com a Creche Canina</a>
         </div>
