--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="#" class="link-nav">FAQ</a>
                 </li>
                 <li class="lista-nav">
-                    <a href="#" class="menu-hide link-nav entrar">Faça o teste</a>
+                    <a href="teste_interativo.html" class="menu-hide link-nav entrar">Faça o teste</a>
                 </li>
             </nav>
         </section>
@@ -119,7 +119,7 @@
         <section class="section-teste">
             <h2 class="h2-titulo">Descubra o Hotel Ideal para Seu Pet!</h2>
             <p class="p-texto">Cada animal é único e merece o melhor! Responda ao nosso teste interativo e descubra em poucos minutos o hotel ideal que atende às necessidades e à personalidade do seu pet.</p>
-            <button class="btn-teste">Comece o teste!</button>
+            <button class="btn-teste"><a href="teste_interativo.html">Comece o teste!</a></button>
         </section>
         <section class="elemento"></section>
     </main>
