[Atualização] - Informações do Local

--- a/informacao_local.html
+++ b/informacao_local.html
@@ -119,6 +119,15 @@
                 </div>
             </div>
             <button class="outros-servicos">+ Atividades e Serviços</button>
+            <div class="div-reserva">
+                <p class="p-reserva-valor">A partir de<span>R$ 50,00 dia</span></p>
+                <div class="data-reserva">
+                    <label for="data-reserva">Verifique se a data está disponível:</label>
+                    <input type="date" name="data-reserva" id="">
+                </div>
+                <button class="btn-reserva">Faça sua reserva</button>
+                <p class="cancelamento">* Cancelamento feito 48hrs sem custo</p>
+            </div>
         </section>
         <section class="section-feedback">
             <div class="div-avaliacao">
