update perfil do usuario

--- a/perfil_do_usuario.html
+++ b/perfil_do_usuario.html
@@ -73,7 +73,7 @@
                 <label for="">Endereço completo:</label>
                 <input class="infos" type="text">
                 <label for="">Telefone</label>
-                <input class="info_tel" type="tel">
+                <input class="infos info_tel" type="tel">
             </form>
         </section>
         <section class="info_pet">
@@ -97,7 +97,7 @@
                     <p>Comportamento:</p>
                     <p>Cuidado especial:</p>
                 </div>
-                <div class="card_adicionar">
+                <div class="cards_pet card_adicionar">
                     <img src="assets/imagens/img_perfil/adicionar.svg" alt="">
                     <p>Adicionar</p>
                 </div>
@@ -125,25 +125,37 @@
         </section>
         <section class="forma_pagamento">
             <h2>Formas de pagamentos salvas</h2>
-            <div>
-                <p>
-                    <img class="bandeira_cartao" src="assets/imagens/img_perfil/mastercard.svg" alt="">
-                    <span>Mastercard : *********4586</span> 
-                    <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
-                    <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
-                </p>
-                <p>
-                    <img class="bandeira_cartao" src="assets/imagens/img_perfil/visa.svg" alt="">
-                    <span>Visa : *********7474</span> 
-                    <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
-                    <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
-                </p>
-                <p>
-                    <img class="bandeira_cartao" src="assets/imagens/img_perfil/elo.svg" alt="">
-                    <span>elo : *********1215</span> 
-                    <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
-                    <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
-                </p>
+            <div class="div-pagamento">
+                <div class="pagamento-container">
+                    <div class="cartao-container">
+                        <img class="bandeira_cartao" src="assets/imagens/img_perfil/mastercard.svg" alt="">
+                        <p>Mastercard : *********4586</p> 
+                    </div>
+                    <div class="icons-container">
+                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
+                        <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
+                    </div>
+                </div>
+                <div class="pagamento-container">
+                    <div class="cartao-container">
+                        <img class="bandeira_cartao" src="assets/imagens/img_perfil/visa.svg" alt="">
+                        <p>Visa : *********7474</p>
+                    </div>
+                    <div class="icons-container">
+                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
+                        <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
+                    </div>
+                </div>
+                <div class="pagamento-container">
+                    <div class="cartao-container">
+                        <img class="bandeira_cartao" src="assets/imagens/img_perfil/elo.svg" alt="">
+                        <p>elo : *********1215</p> 
+                    </div>
+                    <div class="icons-container">
+                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
+                        <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
