Mudança de estilos e atualização de links para consistência entre páginas

--- a/como_funciona.html
+++ b/como_funciona.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Funciona</title>
+    <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/index.css">
@@ -101,7 +102,7 @@
         <section class="infos">
             <section class="info-footer">
                 <h2>Sobre Nós</h2>
-                <li><a href="" class="info-links">Sobre Nós</a></li>
+                <li><a href="sobrenos.html" class="info-links">Sobre Nós</a></li>
                 <li><a href="" class="info-links">Hospedar um Pet</a></li>
                 <li><a href="" class="info-links">Contato</a></li>
                 <li><a href="" class="info-links">Termos de Serviço</a></li>
