--- a/informacao_local.html
+++ b/informacao_local.html
@@ -68,7 +68,7 @@
             </button>
         </section>
         <section class="section-info-hotel">
-            <h2 class="nome-hotel">Creche Canina Feliz</h2>
+            <h1 class="nome-hotel">Creche Canina Feliz</h1>
             <p class="p-texto">4,90</p>
             <div class="avaliacao" data-rating="5">
                 <div class="patinhas"></div>
@@ -89,7 +89,7 @@
         </section>
         <section>
             <p class="p-principal">A Creche Canina Feliz oferece um ambiente seguro e divertido para o seu animal. Com profissionais dedicados e diversas atividades, garantimos que seu pet se sinta amado e acolhido.</p>
-            <h3 class="titulo-secoes">Aqui seus pets podem desfrutar de:</h3>
+            <h2 class="titulo-secoes">Aqui seus pets podem desfrutar de:</h2>
             <div class="lista">
                 <div class="lista-beneficios">
                     <div class="beneficios" id="teste">
@@ -131,7 +131,7 @@
         </section>
         <section class="section-feedback">
             <div class="div-avaliacao">
-                <h2>Avaliação</h2>
+                <h3>Avaliação</h3>
                 <div class="estrelas">
                     <div class="barra">
                         <div class="preenchido" style="width: 70%;"></div>
@@ -162,7 +162,7 @@
                     </div>
                     <span>1.0</span>
                 </div>
-                <button>+ avaliações</button>
+                <button>+ Avaliações</button>
             </div>
             <div class="div-feedback">
                 <div class="feedback avaliacao" data-rating="5">
@@ -203,7 +203,7 @@
             </div>
         </section>
         <section class="mapa">
-            <h3 class="titulo-secoes">Nossa Localização:</h3>
+            <h2 class="titulo-secoes">Nossa Localização:</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.7301876446795!2d-49.25493042494304!3d-16.690379845655144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef1077239954f%3A0x40ee78e11fd2a527!2sFACINPRO%20-%20Faculdade%20INPRO%20-%20Gradua%C3%A7%C3%A3o%2C%20P%C3%B3s-Gradua%C3%A7%C3%A3o%20e%20MBA!5e0!3m2!1spt-BR!2sbr!4v1729574271937!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <div class="collapse" tabindex="1">
@@ -219,7 +219,7 @@
         <section class="infos">
             <section class="info-footer">
                 <h2>Sobre Nós</h2>
-                <li><a href="" class="info-links">Sobre Nós</a></li>
+                <li><a href="sobrenos.html" class="info-links">Sobre Nós</a></li>
                 <li><a href="" class="info-links">Hospedar um Pet</a></li>
                 <li><a href="" class="info-links">Contato</a></li>
                 <li><a href="" class="info-links">Termos de Serviço</a></li>
