--- a/planos_precos.html
+++ b/planos_precos.html
@@ -113,7 +113,7 @@
         <section class="infos">
             <section class="info-footer">
                 <h2>Sobre Nós</h2>
-                <li><a href="" class="info-links">Sobre Nós</a></li>
+                <li><a href="sobrenos.html" class="info-links">Sobre Nós</a></li>
                 <li><a href="" class="info-links">Hospedar um Pet</a></li>
                 <li><a href="" class="info-links">Contato</a></li>
                 <li><a href="" class="info-links">Termos de Serviço</a></li>
