atualização da tela de pagamento

--- a/perfil_do_usuario.html
+++ b/perfil_do_usuario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +12,14 @@
     <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
     <script src="assets/js/menu_index.js" defer></script>
 </head>
+
 <body>
     <header>
         <section class="info-principal">
             <div class="nome-sistema">
-                <a href="index.html"><h1>Hos<span>pet</span>agem</h1></a>
+                <a href="index.html">
+                    <h1>Hos<span>pet</span>agem</h1>
+                </a>
             </div>
             <button class="perfil">
                 <a href="login.html">Usuário</a>
@@ -66,14 +70,22 @@
         <section class="info_usuario">
             <h2>Minhas informações</h2>
             <form action="">
-                <label for="">Nome completo:</label>
-                <input class="infos" type="text">
-                <label for="">E-mail</label>
-                <input class="infos" type="email">
-                <label for="">Endereço completo:</label>
-                <input class="infos" type="text">
-                <label for="">Telefone</label>
-                <input class="infos info_tel" type="tel">
+                <div class="itens_usuario">
+                    <label for="nome">Nome completo:</label>
+                    <input class="infos" type="text">
+                </div>
+                <div class="itens_usuario">
+                    <label for="">E-mail</label>
+                    <input class="infos" type="email">
+                </div>
+                <div class="itens_usuario">
+                    <label for="">Endereço completo:</label>
+                    <input class="infos" type="text">
+                </div>
+                <div class="itens_usuario">
+                    <label for="">Telefone</label>
+                    <input class="infos info_tel" type="tel">
+                </div>
             </form>
         </section>
         <section class="info_pet">
@@ -129,10 +141,10 @@
                 <div class="pagamento-container">
                     <div class="cartao-container">
                         <img class="bandeira_cartao" src="assets/imagens/img_perfil/mastercard.svg" alt="">
-                        <p>Mastercard : *********4586</p> 
+                        <p>Mastercard : *********4586</p>
                     </div>
                     <div class="icons-container">
-                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
+                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt="">
                         <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
                     </div>
                 </div>
@@ -142,17 +154,17 @@
                         <p>Visa : *********7474</p>
                     </div>
                     <div class="icons-container">
-                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
+                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt="">
                         <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
                     </div>
                 </div>
                 <div class="pagamento-container">
                     <div class="cartao-container">
                         <img class="bandeira_cartao" src="assets/imagens/img_perfil/elo.svg" alt="">
-                        <p>elo : *********1215</p> 
+                        <p>elo : *********1215</p>
                     </div>
                     <div class="icons-container">
-                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt=""> 
+                        <img class="icons" src="assets/imagens/img_perfil/delete.svg" alt="">
                         <img class="icons" src="assets/imagens/img_perfil/icon_form.svg" alt="">
                     </div>
                 </div>
@@ -173,23 +185,28 @@
                 <li><a href="" class="info-links">Termos de Serviço</a></li>
                 <li><a href="" class="info-links">Política de Privacidade</a></li>
             </section>
-    
+
             <section class="info-footer">
                 <h2>Suporte</h2>
-                <li><p>Email:</p></li>
+                <li>
+                    <p>Email:</p>
+                </li>
                 <li><a href="" class="info-links">contato@hospedagemdepets.com</a></li>
-                <li><p>Telefone:</p></li>
+                <li>
+                    <p>Telefone:</p>
+                </li>
                 <li><a href="" class="info-links">(XX) XXXXX-XXXX</a></li>
             </section>
-    
+
             <section class="info-footer">
                 <h2>Redes Sociais</h2>
                 <div class="icon-footer">
                     <i class="fa-brands fa-instagram fa-3x"></i>
-                    <i class="fa-brands fa-facebook fa-3x"></i>    
+                    <i class="fa-brands fa-facebook fa-3x"></i>
                 </div>
             </section>
         </section>
     </footer>
 </body>
+
 </html>
