--- a/pagamento.html
+++ b/pagamento.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagamento</title>
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/pagamento.css">
+    <link rel="stylesheet" href="assets/css/modal.css">
 
     <script src="https://kit.fontawesome.com/e8db2f40d0.js" crossorigin="anonymous" defer></script>
     <script src="assets/js/menu_index.js" defer></script>
+    <script src="assets/js/pagamento.js" defer></script>
 </head>
 
 <body>
@@ -68,114 +70,199 @@
             </button>
         </section>
 
-        <section class="forma_pagamento">
-            <h2 class="titulo_pagamento">Escolha o Método de Pagamento</h2>
-            <p class="p_pagamento">Qual será a forma de pagamento: </p>
+        <section class="forma-pagamento">
+            <h2 class="titulo-pagamento">Escolha o Método de Pagamento</h2>
+            <p class="p-pagamento">Qual será a forma de pagamento: </p>
             <div class="div-radio-btn">
-                <div>
-                    <input type="radio" name="pagamento">
-                    <label for="pagamento" class="op_pagamento">Pix<i class="fa-brands fa-pix"></i></label>
-                </div>
-                <div>
-                    <input type="radio" name="pagamento">
-                    <label for="pagamento" class="op_pagamento">Cartão de Débito<i
-                            class="fa-regular fa-credit-card"></i></label>
-                </div>
-                <div>
-                    <input type="radio" name="pagamento">
-                    <label for="pagamento" class="op_pagamento">Cartão de Crédito<i
-                            class="fa-regular fa-credit-card"></i></label>
+                <div class="div-radio-btn">
+                    <div class="op-pagamento">
+                        <input type="radio" name="pagamento" value="Pix" id="pix">
+                        <label for="pix">Pix <i class="fa-brands fa-pix"></i></label>
+                    </div>
+                    <div class="op-pagamento">
+                        <input type="radio" name="pagamento" value="Cartão de Débito" id="debito">
+                        <label for="debito">Cartão de Débito <i class="fa-regular fa-credit-card"></i></label>
+                        <div class="op-cartoes">
+                            <div class="cartao-alinhamento">
+                                <input type="checkbox" name="cartao-escolhido" id="cartao">
+                                <label for="cadastrado">
+                                    <div class="info-cartao-cadastrado">
+                                        <img src="assets/imagens/img_perfil/mastercard.svg" alt="" class="icone-cartao">
+                                        <div>
+                                            <p class="paragrafo-cartao">Mastercard :*********4586</p>
+                                            <p class="paragrafo-cartao">Válido até: 12/25</p>
+                                            <p class="paragrafo-cartao">Nome do Titular: João da Silva</p>
+                                        </div>
+                                    </div>
+                                </label>
+                            </div>
+                            <div class="cartao-alinhamento">
+                                <input type="checkbox" name="cartao-escolhido" id="adicionar">
+                                <label class="ad-cartao" for="adicionar">Adicionar Cartao</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="op-pagamento">
+                        <input type="radio" name="pagamento" value="Cartão de Crédito" id="credito">
+                        <label for="credito">Cartão de Crédito <i class="fa-regular fa-credit-card"></i></label>
+                    </div>
                 </div>
             </div>
             </div>
         </section>
 
-        <section class="dados_cartao">
-            <h2 class="titulo_pagamento">Insira os Dados do Cartão</h2>
-            <form action="">
-                <div class="container_forms">
-                    <div class="itens_forms">
-                        <label class="label_pagamento" for="">Nome do Titular:
-                            <input class="input_dados" type="text">
-                        </label>
+        <section class="dados-cartao">
+            <h2 class="titulo-pagamento">Insira os Dados do Cartão</h2>
+            <form action="method">
+                <div class="container-forms">
+                    <div class="itens-forms">
+                        <label class="label-pagamento" for="titular">Nome do Titular: </label>
+                        <input class="input-dados" type="text" id="titular">
                     </div>
-                    <div class="itens_forms">
-                        <label class="label_pagamento" for="">Número do Cartão:
-                            <input class="input_dados" type="text">
-                        </label>
+                    <div class="itens-forms">
+                        <label class="label-pagamento" for="num-cartao">Número do Cartão: </label>
+                        <input class="input-dados" type="text" id="num-cartao">
                     </div>
-                    <div class="itens_forms">
-                        <div>
-                            <label class="label_pagamento" for="">Data de Validade:</label>
-                            <input type="date" name="" id="">
-                            <label class="label_pagamento" for="">CVV (Código de Segurança):</label>
-                            <input class="cod_cartao" type="text">
-                        </div>
+                    <div class="itens-forms">
+                        <label class="label-pagamento" for="data">Data de Validade:</label>
+                        <input type="date" id="data">
                     </div>
-                    <div class="itens_forms">
-                        <div class="container_check">
-                            <input class="check_salvar" type="checkbox" name="" id="">
-                            <label class="label_check" for="">Salvar este cartão para futuras transações
-                                (opcional)</label>
+                    <div class="itens-forms">
+                        <label class="label-pagamento" for="cod-seg">CVV (Código de Segurança):</label>
+                        <input class="cod-cartao" type="text" id="cod-seg">
+                    </div>
+                    <div class="itens-forms">
+                        <div class="container-check">
+                            <input class="check-salvar" type="checkbox" id="salvar">
+                            <label class="label-check" for="salvar">Salvar este cartão para futuras
+                                transações(opcional)</label>
                         </div>
                     </div>
                 </div>
-                <button class="btn_salvar">Salvar Cartão</button>
+                <button class="btn-salvar">Salvar Cartão</button>
             </form>
         </section>
         <section>
-            <h2 class="titulo_pagamento">Revisão dos Dados de Pagamento</h2>
-            <p class="nome_hotel"><span>Nome da Hospedagem:</span> Cãotinho Feliz</p>
-            <div class="infos_hospedagem">
-                <div class="cards_infos">
+            <h2 class="titulo-pagamento">Revisão dos Dados de Pagamento</h2>
+            <p class="nome-hotel"><span>Nome da Hospedagem:</span> Cãotinho Feliz</p>
+            <div class="infos-hospedagem">
+                <div class="cards-infos">
                     <p><span>Quantos pets para a reserva:</span> 1</p>
                 </div>
-                <div class="cards_infos">
+                <div class="cards-infos">
                     <p><span>Seu Pet cadastrado:</span> Simba</p>
                 </div>
-                <div class="cards_infos">
+                <div class="cards-infos">
                     <p><span>Data:</span> 01/11/2024 - 05/11/2024</p>
                 </div>
-                <div class="cards_infos">
+                <div class="cards-infos">
                     <p><span>Horário de entrada e de saída:</span> 14:00 - 11:00</p>
                 </div>
             </div>
 
-            <div class="servicos_extras">
-                <h3 class="subtitulo_servico">Serviços Extras:</h3>
-                <div class="container_sevicos">
-                    <div class="itens_servicos">
-                        <div class="cards_servicos">
-                            <img class="icons_servicos" src="assets/imagens/icons/banho-tosa-icon.svg">
-                            <p class="tipo_servico">Banho e tosa</p>
+            <div class="servicos-extras">
+                <h3 class="subtitulo-servico">Serviços Extras:</h3>
+                <div class="container-sevicos">
+                    <div class="itens-servicos">
+                        <div class="cards-servicos">
+                            <img class="icons-servicos" src="assets/imagens/icons/banho-tosa-icon.svg">
+                            <p class="tipo-servico">Banho e tosa</p>
                         </div>
-                        <p class="preco_servicos">R$ 30,00</p>
+                        <p class="preco-servicos">R$ 30,00</p>
                     </div>
-                    <div class="itens_servicos">
-                        <div class="cards_servicos">
-                            <img class="icons_servicos" src="assets/imagens/icons/passeio-icon.svg" alt="">
-                            <p class="tipo_servico">Passeio ao ar livre</p>
+                    <div class="itens-servicos">
+                        <div class="cards-servicos">
+                            <img class="icons-servicos" src="assets/imagens/icons/passeio-icon.svg" alt="">
+                            <p class="tipo-servico">Passeio ao ar livre</p>
                         </div>
-                        <p class="preco_servicos"> R$ 20,00 por dia (4 dias = R$ 80,00)</p>
+                        <p class="preco-servicos"> R$ 20,00 por dia (4 dias = R$ 80,00)</p>
                     </div>
-                    <div class="itens_servicos">
-                        <div class="cards_servicos">
-                            <img class="icons_servicos" src="assets/imagens/icons/cuidados-icon.svg" alt="">
-                            <p class="tipo_servico">Cuidados Personalizados</p>
+                    <div class="itens-servicos">
+                        <div class="cards-servicos">
+                            <img class="icons-servicos" src="assets/imagens/icons/cuidados-icon.svg" alt="">
+                            <p class="tipo-servico">Cuidados Personalizados</p>
                         </div>
-                        <p class="preco_servicos"> R$ 50,00 (taxa fixa)</p>
+                        <p class="preco-servicos"> R$ 50,00 (taxa fixa)</p>
                     </div>
                 </div>
             </div>
 
-            <div class="preco_final">
-                <h3 class="subtitulo_pagamento">Preço Total:</h3>
-                <p class="p_preco_final">Diária da Hospedagem: R$ 480,00 + Serviços Extras: R$ 160,00</p>
-                <div class="valor_final">
+            <div class="preco-final">
+                <h3 class="subtitulo-pagamento">Preço Total:</h3>
+                <p class="p-preco-final">Diária da Hospedagem: R$ 480,00 + Serviços Extras: R$ 160,00</p>
+                <div class="valor-final">
                     <p>Valor Final:</p>
                     <p><span>R$ 704,00</span></p>
                 </div>
-                <button class="btn_confirmar">Confirmar pagamento</button>
+                <button class="btn-confirmar" style="display: none;">Confirmar pagamento</button>
+            </div>
+        </section>
+        <section class="pagamento_pix">
+            <h2 class="titulo-pagamento">Pagamento via QR Code</h2>
+            <div class="container-pix">
+                <img class="qr-code" src="assets/imagens/qrcode-pix.svg" alt="">
+                <p class="p-pix">Escaneie o QR Code abaixo com seu aplicativo de banco para concluir o pagamento.</p>
+                <span>ou</span>
+                <p class="p-pix">00020126580014BR.GOV.BCB.PIX0114+55819876543200314Pagamento
+                    Hospetagem5204000053039865405704.005802BR5920Nome do
+                    Recebedor6009GOIANIA61080540900062070503***6304A1B2</p>
+                <button class="btn-pix">Copiar e colar</button>
+            </div>
+        </section>
+        <section class="modal" id="modal" style="display: none;">
+            <div class="modal-content">
+                <img src="assets/imagens/img_perfil/delete.svg" alt="" class="delete">
+                <h1 class="titulo-modal">Confirmação de Pagamento</h1>
+                <div class="infos-hospedagem">
+                    <!-- Conteúdo do modal aqui -->
+                    <div class="alinhamento">
+                        <p class="paragrafo-modal">Pet Cadastrado : Simba</p>
+                        <p class="paragrafo-modal">Data de Início: 01/11/2024 ás 14:00hrs</p>
+                        <p class="paragrafo-modal">Data de Término: 05/11/2024 ás 11:00</p>
+                        <p class="paragrafo-modal">Serviços Extras:</p>
+
+                        <div class="container-sevicos">
+                            <div class="itens-servicos">
+                                <div class="cards-servicos">
+                                    <img class="icons-servicos" src="assets/imagens/icons/banho-tosa-icon.svg">
+                                    <p class="tipo-servico">Banho e tosa</p>
+                                </div>
+                                <p class="preco-servicos">R$ 30,00</p>
+                            </div>
+                            <div class="itens-servicos">
+                                <div class="cards-servicos">
+                                    <img class="icons-servicos" src="assets/imagens/icons/passeio-icon.svg" alt="">
+                                    <p class="tipo-servico">Passeio ao ar livre</p>
+                                </div>
+                                <p class="preco-servicos"> R$ 20,00 por dia (4 dias = R$ 80,00)</p>
+                            </div>
+                            <div class="itens-servicos">
+                                <div class="cards-servicos">
+                                    <img class="icons-servicos" src="assets/imagens/icons/cuidados-icon.svg" alt="">
+                                    <p class="tipo-servico">Cuidados Personalizados</p>
+                                </div>
+                                <p class="preco-servicos"> R$ 50,00 (taxa fixa)</p>
+                            </div>
+                        </div>
+
+                        <div class="valor-total">
+                            <p>Valor Total: R$704,00</p>
+                        </div>
+
+                        <div class="container-cartao">
+                            <p class="paragrafo-modal">Método de Pagamento: Cartão de Débito </p>
+                            <div class="infos-cartao">
+                                <img src="assets/imagens/img_perfil/mastercard.svg" alt="" class="icon-cartao">
+                                <div>
+                                    <p class="paragrafo-modal">Mastercard :*********4586</p>
+                                    <p class="paragrafo-modal">Válido até: 12/25</p>
+                                    <p class="paragrafo-modal">Nome do Titular: João da Silva</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn-finalizar" id="confirmar-pagamento">Finalizar pagamento</button>
+                </div>
             </div>
         </section>
     </main>
