Atualização de estilos em várias páginas para consistência e melhor capacidade de resposta; Responsividade tela de Planos e Preços

--- a/cadastro.html
+++ b/cadastro.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="login-cad-box">
-                <form action="" method="post">
+                <form autocomplete="on" method="post">
                     <div class="pagina ativo" id="pagina-1">
                         <h2 class="titulo-login-cad">Cadastre-se</h2>
 
@@ -207,7 +207,7 @@
 
                         <a id="anterior" onclick="paginaAnterior()"><i class="fa-solid fa-angle-left"></i> Anterior</a>
 
-                        <button>Finalizar meu cadastro</button>
+                        <button type="submit">Finalizar meu cadastro</button>
                     </div>
                 </form>
             </div>
