--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             </div>
             <div class="login-cad-box">
                 <h2 class="titulo-login-cad">Faça seu login</h2>
-                <form action="" method="post" class="formulario">
+                <form autocomplete="on" method="post" class="formulario">
                     <div class="div-inputs input">
                         <label for="email">Seu email:</label>
                         <div class="icone-input">
