--- a/planos_precos.html
+++ b/planos_precos.html
@@ -66,44 +66,89 @@
         </section>
 
         <section class="titulo_planos">
-            <h1>Planos e Preços</h1>
-            <p>Descubra os planos disponíveis para cadastrar a sua hospedagem e alcançar mais clientes!</p>
+            <h1 class="titulo">Planos e Preços</h1>
+            <p class="p-texto p-centro">Descubra os planos disponíveis para cadastrar a sua hospedagem e alcançar mais clientes!</p>
         </section>
         <div class="conteiner_planos">
             <section class="plano_basico">
-                <h3>Plano Básico</h3>
+                <h3 class="nome-plano">Plano Básico</h3>
                 <ul>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Cadastro de até 5 pets</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Perfil básico da hospedagem</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Acesso a comentários e avaliações</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Suporte ao cliente via email</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Comissão: 10% sobre cada reserva realizada</li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FFD43B;"></i>
+                        <p class="p-texto">Cadastro de até 5 pets</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FFD43B;"></i>
+                        <p class="p-texto">Perfil básico da hospedagem</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FFD43B;"></i>
+                        <p class="p-texto">Acesso a comentários e avaliações</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FFD43B;"></i>
+                        <p class="p-texto">Suporte ao cliente via email</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FFD43B;"></i>
+                        <p class="p-texto">Comissão: 10% sobre cada reserva realizada</p>
+                    </li>
                 </ul>
-                <p>R$ XX,XX<span>/mês</span></p>
+                <p class="p-texto p-centro borda">R$ XX,XX<span>/mês</span></p>
             </section>
             <section class="plano_avancado">
-                <h3>Plano Avançado</h3>
+                <h3 class="nome-plano">Plano Avançado</h3>
                 <ul>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Cadastro de até 15 pets</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Perfil detalhado da hospedagem com fotos e descrição</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Respostas a comentários e avaliações </li> 
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Suporte prioritário ao cliente</li>
-                    <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Comissão: 8% sobre cada reserva realizada</li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FC68C4;"></i>
+                        <p class="p-texto">Cadastro de até 15 pets</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FC68C4;"></i>
+                        <p class="p-texto">Perfil detalhado da hospedagem com fotos e descrição</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FC68C4;"></i>
+                        <p class="p-texto">Respostas a comentários e avaliações</p>
+                    </li> 
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FC68C4;"></i>
+                        <p class="p-texto">Suporte prioritário ao cliente</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #FC68C4;"></i>
+                        <p class="p-texto">Comissão: 8% sobre cada reserva realizada</p>
+                    </li>
                 </ul>
-                <p>R$ XX,XX<span>/mês</span></p>
+                <p class="p-texto p-centro borda">R$ XX,XX<span>/mês</span></p>
+            </section>
+            <section class="plano_premium">
+                <h3 class="nome-plano">Plano Premium</h3>
+                <ul>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #74C0FC;"></i>
+                        <p class="p-texto">Cadastro ilimitado de pets</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #74C0FC;"></i>
+                        <p class="p-texto">Perfil completo com vídeos e fotos</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #74C0FC;"></i>
+                        <p class="p-texto">Promoção em destaque na página principal</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #74C0FC;"></i>
+                        <p class="p-texto">Suporte VIP ao cliente</p>
+                    </li>
+                    <li class="item-lista">
+                        <i class="fa-solid fa-paw" style="color: #74C0FC;"></i>
+                        <p class="p-texto">Comissão: 5% sobre cada reserva realizada</p>
+                    </li>
+                </ul>
+                <p class="p-texto p-centro borda">R$ XX,XX<span>/mês</span></p>
             </section>
         </div>
-        <section class="plano_premium">
-            <h3>Plano Premium</h3>
-            <ul>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Cadastro ilimitado de pets  </li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Perfil completo com vídeos e fotos</li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Promoção em destaque na página principal</li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Suporte VIP ao cliente </li>
-                <li><i class="fa-solid fa-paw" style="color: #FFD43B;"></i>Comissão: 5% sobre cada reserva realizada</li>
-            </ul>
-            <p>R$ XX,XX<span>/mês</span></p>
-        </section>
     </main>
 
     <footer class="footer">
