tela_cadastro_pet

--- a/pagamento.html
+++ b/pagamento.html
@@ -82,7 +82,7 @@
                     <div class="op-pagamento">
                         <input type="radio" name="pagamento" value="Cartão de Débito" id="debito">
                         <label for="debito">Cartão de Débito <i class="fa-regular fa-credit-card"></i></label>
-                        <div class="op-cartoes">
+                        <!-- <div class="op-cartoes">
                             <div class="cartao-alinhamento">
                                 <input type="checkbox" name="cartao-escolhido" id="cartao">
                                 <label for="cadastrado">
@@ -100,7 +100,7 @@
                                 <input type="checkbox" name="cartao-escolhido" id="adicionar">
                                 <label class="ad-cartao" for="adicionar">Adicionar Cartao</label>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="op-pagamento">
                         <input type="radio" name="pagamento" value="Cartão de Crédito" id="credito">
