Atualização dos arquivos e funcionalidades

--- a/tela_reserva.html
+++ b/tela_reserva.html
@@ -83,12 +83,12 @@
 
                     <div class="div-campos">
                         <p class="p-label">Para quais animais deseja reservar?</p>
-                        <div class="collapse" id="collapse" tabindex="0">
+                        <div class="collapse select" id="collapse" tabindex="0">
                             <div class="nome-menu">
                                 <p class="p-input">...</p>
                             </div>
                             <div class="menu-collapse" tabindex="1">
-                                <ul>
+                                <ul class="lista-menu">
                                     <li class="item-menu">
                                         <input type="checkbox">
                                         <label for="" class="p-input">Oliver</label>
@@ -127,39 +127,39 @@
                 <div class="div-servicos">
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/brincadeira-icon.svg" alt="">
-                        <p class="p-input">Área de Brincadeiras</p>
+                        <p>Área de Brincadeiras</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/piscina-icon.svg" alt="">
-                        <p class="p-input">Piscina para Cães</p>
+                        <p>Piscina para Cães</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/treinamento-icon.svg" alt="">
-                        <p class="p-input">Treinamento</p>
+                        <p>Treinamento</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/cuidados-icon.svg" alt="">
-                        <p class="p-input">Cuidados Personalizados</p>
+                        <p>Cuidados Personalizados</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/transporte-icon.svg" alt="">
-                        <p class="p-input">Serviço de Transporte</p>
+                        <p>Serviço de Transporte</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/passeio-icon.svg" alt="">
-                        <p class="p-input">Passeio ao Ar Livre</p>
+                        <p>Passeio ao Ar Livre</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/descanso-icon.svg" alt="">
-                        <p class="p-input">Área de Descanso</p>
+                        <p>Área de Descanso</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/banho-tosa-icon.svg" alt="">
-                        <p class="p-input">Banho e Tosa</p>
+                        <p>Banho e Tosa</p>
                     </button>
                     <button class="servicos-btn" onclick="toggleBackground(this)">
                         <img src="assets/imagens/icons/hospedagem-icon.svg" alt="">
-                        <p class="p-input">Hospedagem Noturna</p>
+                        <p>Hospedagem Noturna</p>
                     </button>
                 </div>
                 <h3 class="section-h3">Preço com serviços inclusos: R$ XX,XX</h3>
@@ -172,15 +172,15 @@
                 <div class="div-radio-btn">
                     <div>
                         <input type="radio" name="pagamento">
-                        <label for="pagamento" class="p-input">Pix<i class="fa-brands fa-pix"></i></label>
+                        <label for="pagamento">Pix<i class="fa-brands fa-pix i"></i></label>
                     </div>
                     <div>
                         <input type="radio" name="pagamento">
-                        <label for="pagamento" class="p-input">Cartão de Débito<i class="fa-regular fa-credit-card"></i></label>
+                        <label for="pagamento">Cartão de Débito<i class="fa-regular fa-credit-card i"></i></label>
                     </div>
                     <div>
                         <input type="radio" name="pagamento">
-                        <label for="pagamento" class="p-input">Cartão de Crédito<i class="fa-regular fa-credit-card"></i></label>
+                        <label for="pagamento">Cartão de Crédito<i class="fa-regular fa-credit-card i"></i></label>
                     </div>
                 </div>
             </section>
